--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_small">10dp</dimen>
-
+    <dimen name="margin_extra_small">5dp</dimen>
+    <dimen name="image_thumbnail_small">100dp</dimen>
 </resources>
